fixes and changes

--- a/jadavpurunimun/src/Text.scss
+++ b/jadavpurunimun/src/Text.scss
@@ -1,7 +1,7 @@
 :root {
     --color-main-second: #C23B6C;
     --color-main: #D69C28;
-    --color-main-third: #da0b49;
+    --color-main-third: #9c0362;
     --color-main-gradient: linear-gradient(#C23B6C,#D69C28,#A42A3D);
     --color-main-prev:#8d0f50;
   }
