--- a/jadavpurunimun/src/Bigcmt.css
+++ b/jadavpurunimun/src/Bigcmt.css
@@ -1,13 +1,14 @@
-body{
-    margin:0;
-   
-}
+
 
 /* css slider */
  .slider {
+    margin:0;
     height: 100vh;
    
     position: relative;
+    margin-top:-100vh;
+    overflow-y:hidden;
+
 }
  .slider  .list .item{
     position: absolute;
@@ -63,7 +64,7 @@ body{
 }
  .slider  .list .item.active{
     opacity: 1;
-    z-index: 100;
+    z-index: 10;
 }
 @keyframes showContent {
     to{
