--- a/jadavpurunimun/src/Cmt.css
+++ b/jadavpurunimun/src/Cmt.css
@@ -2,56 +2,31 @@ body{
     max-width:100%;
     
     overflow-x:hidden;
+   
 }
 .committee-page{
         
     height: 100vh;
-    
+    width: 100%;
     background-color: #240a1f;
 
     overflow-x: hidden;
     max-width: 100%;
-}
-
-.committee-page::before{
-    margin-top:200vh;
-    content:'';
-    position:absolute;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    background:linear-gradient(#791752 40%,#af2f38);
-    clip-path:circle(25% at right 90%);
-    max-width:100%;
-    
-    
+    position: absolute;
   
 }
 
 
 
-.committee-page::after{
-    
-    content:'';
-    position:absolute;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    z-index: -1;
-}
-
-
 .container{
-margin-top:212vh;
+
+
 position:absolute;
 display:flex;
 left: 7.8%;
-top:50%;
+top:60%;
 transform:translateY(-50%);
-overflow-x: hidden;
+
 
 }
 
@@ -68,6 +43,7 @@ background: linear-gradient(to right,#bb237e 30% ,#DC9924, #eb3642 ); /* Your bl
 -webkit-background-clip: text;
 background-clip: text;
 -webkit-text-fill-color: transparent;
+
 
 }
 .container .card{
@@ -162,33 +138,14 @@ border-radius:10px;
 @media (max-width:767px){
     
     .committee-page{
+      
         max-width:100%;
-        height:325vh;
+        min-height:400vh;
         overflow-x:hidden;
         margin:0;
     }
-    .committee-page::before{
-    margin-top:445vh;
-    content:'';
-    position:absolute;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    background:linear-gradient(#791752 40%,#af2f38);
-    clip-path:circle(25% at right 90%);
-    max-width:100%;
     
-    
-  
-}
 
-.committee-page::after{
-    max-width:100%;
-    
-    overflow-x:hidden;
-    margin:0;
-}
 
 .committee-page h1{
 
@@ -203,14 +160,26 @@ border-radius:10px;
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+  
 
 }
 .container{
     
-    max-width:360px;
-    overflow-x:hidden;
+    
+    /* z-index:-1;  */
+
     
 }
+
+
+.container{
+    position: absolute;
+    margin-top:-200vh;
+    max-width:400px;
+    overflow-x:hidden;
+    display:flex;
+   
+    }
 .container .card{
     all:unset;
     display:flex;
@@ -234,7 +203,7 @@ position: relative;
 
 
 .container .card:nth-child(1){
-    margin-top:250vh;
+    margin-top:350vh;
 }
 .container .card:hover{
     
@@ -332,32 +301,18 @@ position: relative;
 
 
 @media (max-width:400px){
-    .container .card:nth-child(1){
-        margin-top:290vh;
-    }
+   .container{
+    margin-top:-180vh;
+   }
     .container .card{
         width:330px;
     }
 
     .committee-page{
         max-width:100%;
-        height:350vh;
+       
         overflow-x:hidden;
         margin:0;
     }
-    .committee-page::before{
-    margin-top:470vh;
-    content:'';
-    position:absolute;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    background:linear-gradient(#791752 40%,#af2f38);
-    clip-path:circle(25% at right 90%);
-    max-width:100%;
-    
-    
-  
-}
+   
 }
