--- a/jadavpurunimun/src/ImageSlider.css
+++ b/jadavpurunimun/src/ImageSlider.css
@@ -1,24 +1,10 @@
 body {
     margin: 0;
     padding: 0;
-    overflow-y: scroll; 
-    scrollbar-width: thin; /* For Firefox */
-    scrollbar-color: transparent transparent; /* For Firefox */
-    overflow-x: hidden;
+    
   }
   
-  body::-webkit-scrollbar {
-    width: 0px; /* Adjust the width as needed */
-  }
-  
-  body::-webkit-scrollbar-thumb {
-    background-color: transparent; /* Hide the scrollbar thumb */
-  }
 
-header{
-    background-color:#010110;
-
-}
 .img-slider-img {
     object-fit: cover;
     width: 100%;
@@ -36,17 +22,28 @@ header{
     all:unset;
     display:block;
     position:absolute;
-    top:50px;
     bottom:0;
     padding: 1rem;
     cursor:pointer;
     transition:background-color 100ms ease-in-out;
     z-index:1;
+    height:50px;
+    width:50px;
+    top:46%;
 
 }
 
 
-
+.img-circle-btn-container{
+   
+        position: absolute;
+        bottom: .5rem;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: .5rem;
+    
+}
 
 .img-slider-circle-btn{
     background:rgb(248, 243, 243);
@@ -79,7 +76,7 @@ header{
     
     color:white;
     font-size:55px;
-    backdrop-filter:brightness(100%);
+ 
 }
 
 
@@ -87,29 +84,22 @@ header{
 @media (max-width:767px){
     .button-arrow-left,.button-arrow-right{
         
-        font-size:50px;
+        font-size:40px;
     }
     .button-arrow-left{
-        transform: translate(-40%,-150%);
+        transform: translate(-50%,-40%);
     }
 
     .button-arrow-right{
-        transform: translate(40%,-150%);
+        transform: translate(70%,-40%);
     }
 
     
 .img-slider-circle-btn{
-    background:rgb(248, 243, 243);
-    all:unset;
-    display:block;
-    width:1.1rem;
-    height:2.5rem;
-    cursor:pointer;
-    transition: scale 100ms ease-in-out;
-    padding-left:2.5px;
-    transform: translate(10%,-20%);
+   z-index:9999;
     
 }
+
 
 
 }
