--- a/jadavpurunimun/src/BigAbout.css
+++ b/jadavpurunimun/src/BigAbout.css
@@ -1,4 +1,135 @@
+/* 
+.bigabout{
+  background-color: #240a1f;
+  margin:0;
+  padding:0;
+}
 
+.big-container {
+  max-width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.big-container h1{
+  position: absolute;
+  font-size:60px;
+  font-family:"Montserrat";
+
+  text-align: center;
+  left:50%;
+  transform: translateX(-50%);
+  background: linear-gradient(to right,#ec34a3 ,#DC9924 );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent; 
+}
+.big-section {
+  
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top:50px;
+  height:100vh;
+  align-items: center;
+  justify-content: center;
+  max-width:100vw;
+
+}
+
+
+
+.big-column {
+  margin-right:22px;
+  width: 48%;
+  box-sizing: border-box;
+  margin-bottom:-400px;
+}
+
+.big-text {
+  
+  text-align: center;
+  font-size:20px;
+  font-family:"Montserrat";
+  color:#f8e1cd ;
+}
+
+.big-image img {
+  width: 100%;
+  height: 350px;
+  border-radius:10px;
+}
+
+.big-image img:hover{
+  scale:1.01;
+  transition: 0.2s ease-in-out;
+}
+
+.arrow{
+  color:#f8e1cd;
+  margin-bottom:-200px;
+  font-size:30px;
+  
+  
+
+}
+.arrow:nth-child(2){
+  margin-bottom:-250px;
+}
+.arrow:hover{
+ 
+  cursor:pointer;
+
+}
+
+.bounce {
+  animation: bounce 2s infinite;
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(-20px);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+
+.arrow button{
+  background: transparent;
+  color:white;
+}
+@media (max-width: 768px) {
+  .big-container {
+    max-width: 100%;
+  }
+
+  .big-column {
+    width: 100%;
+  }
+
+  .big-image img {
+    width: 100%;
+    height: 250px;
+    margin-top: 20px;
+  }
+
+  .big-text {
+    margin-top: 20px;
+  }
+
+  .big-section:nth-child(2) .big-column {
+    order: -1;
+  }
+
+  .big-section:nth-child(4) .big-column {
+    order: -1;
+  }
+} */
 
 .bigabout{
   margin:0;
@@ -21,13 +152,9 @@
      
       background-repeat: repeat-x;
       width: 100%;
-      position: absolute;
+      position: relative;
   }
 
-  
-  .animation_layer.parallax {
-      position: fixed;
-  }
 
 
  .heading{
@@ -36,21 +163,14 @@
     font-family:"Montserrat";
     text-align:center;
     padding-top:33vh;
+    position: absolute;
+    left:50%;
+    transform: translateX(-50%);
 
   }
   #landingimg1{
-    background-image: url("./img/landingimg1.jpeg");
+    background-image: url("./img/aboutbackground.jpg");
   }
-
-  .animation_layer  .gradient {
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    opacity: 0.6;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
 
 
 
@@ -58,7 +178,7 @@
 .text-con{
   width: 100%;
   background-color: #F8E6D9;
-  height: 100%;
+  min-height: 100vh;
 }
 .text {
     font-family: "Montserrat", sans-serif;
@@ -72,7 +192,7 @@
     height:100%;
     margin-top:-1px;
     padding-top:60px;
-    background-color: #F8E6D9;
+  
     
 }
 
@@ -94,96 +214,9 @@
 
     .heading{
       font-size:70px;
-      padding-top:40vh;
+      
     }
     
 
 
 }
-
-
-/* #textblock {
-    background-color: #fdf4e0;
-    height: 200vh;
-    margin-top:-26vh;
-  }
-  
-  #textblock-container {
-    width: 50%;
-    margin: 0 auto;
-    padding-top: 70px;
-  }
-  
-  #textblock-title {
-    color: #ffaf1b;
-    font-size: 35px;
-    font-weight: 600;
-    font-family: "Helvetica Neue";
-  }
-  
-  #textblock-content {
-    color: #ffaf1b;
-    font-size: 20px;
-  }
-  
-  #textblock-footer {
-    color: #ffaf1b;
-    font-size: 15px;
-    font-weight: 400;
-    position: fixed;
-    width: 100%;
-    bottom: 0px;
-    justify-content:center;
-    align-items:center;
-    text-align:center;
-    margin-bottom: 20px;
-  
-  }
-  
-  #textblock-devsense {
-    text-decoration: none;
-    color: #ffaf1b;
-    font-size: 15px;
-    font-weight: 600;
-  }
-  
-  .animation, .animation_layer {
-      height: 1000px;
-  }
-  
-  .animation {
-    display: block;
-      position: relative;
-      z-index: 10;
-  }
-  
-  .animation_layer {
-      background-position: bottom center;
-      background-size: auto 1300px;
-      background-repeat: repeat-x;
-      width: 100%;
-      position: absolute;
-  }
-  .animation_layer.parallax {
-      position: fixed;
-  }
-  
-
-  #landingimg1{
-    background-image: url("./img/landingimg1.jpeg");
-    height: 100vh;
-    
-    background-repeat: no-repeat;
-    width: 100%;
-
-  }
-
-  .animation_layer  .gradient {
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    opacity: 0.6;
-    position: absolute;
-    top: 0;
-    left: 0;
-} */
