--- a/jadavpurunimun/src/Bigcmt.css
+++ b/jadavpurunimun/src/Bigcmt.css
@@ -142,7 +142,7 @@
 }
 .thumbnail{
     position: absolute;
-    bottom: 50px;
+    bottom: 10px;
     z-index: 11;
     display: flex;
     gap: 10px;
@@ -164,8 +164,8 @@
     flex-shrink: 0;
 }
 .thumbnail .item img{
-    width: 100%;
-    height: 100%;
+    width:170px;
+    height: 170px;
     object-fit: cover;
     border-radius: 10px;
 }
