--- a/src/Contact.css
+++ b/src/Contact.css
@@ -13,6 +13,12 @@
 
 	
 }
+
+.swal2-popup {
+	font-size:1em !important;
+	font-family: "Montserrat";
+  }
+
 .contact-container{
 	width: 100%;
 	min-height: 100vh;
