does it ever drive you crazy

--- a/src/About.css
+++ b/src/About.css
@@ -262,16 +262,23 @@
 
 @media (max-width:400px){
   .img {
-   
-    width: 360px;
-    border-radius: 20px;
+  
+    width: 340px;
+    border-radius: 10px;
     height: auto;
-    margin-left:15px;
+    
+
 
     
   }
 
+  .image-container{
+    margin-left:20px;
+   
   
+
+
+  }
   .text-container{
     all:unset;
     font-family: "Montserrat";
@@ -281,5 +288,21 @@
     padding:1px;
     
     margin-left:20px;
+    
+  }
+
+  .text-container h2{
+    font-size:20px;
+  }
+}
+
+@media (max-width:380px){
+  .img{
+    height:200px !important;
+    margin-bottom:20px;
+  }
+  .image-container{
+    margin-left:40px;
+
   }
 }
