--- a/src/Preloader.css
+++ b/src/Preloader.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap&font-display=swap');
+
 .preloader {
   height: 100vh;
   width: 100%;
