--- a/src/BigAbout.css
+++ b/src/BigAbout.css
@@ -93,12 +93,12 @@ max-width:75%;
     overflow-x:hidden;
   }
   .about-us-image {
-    height:125vh;
+    height:120vh;
     overflow-x:hidden;
   }
   .about-us-image img {
     position:relative;
-    height:125vh;
+    height:120vh;
     overflow-x:hidden;
      }
  
@@ -127,8 +127,8 @@ transform: translateX(-50%);
   left:50%;
   transform:translate(-50%,-50%);
   width:400px;
-  font-size:17px;
-  margin-top:200px;
+  font-size:15px;
+  margin-top:9vh;
 }
 }
 
@@ -148,7 +148,7 @@ transform: translateX(-50%);
     left:50%;
     transform:translate(-50%,-50%);
     margin-top:270px;
-    font-size:17px;
+    font-size:15px;
 
   }
 
