--- a/src/BigAbout.css
+++ b/src/BigAbout.css
@@ -147,7 +147,7 @@ transform: translateX(-50%);
     top:50%;
     left:50%;
     transform:translate(-50%,-50%);
-    margin-top:270px;
+    margin-top:21vh;
     font-size:15px;
 
   }
