--- a/src/About.css
+++ b/src/About.css
@@ -159,7 +159,7 @@
     justify-content: center;
     align-items: center;
     height: 120vh; /* Adjust as needed */
-    background-color: #fdf4e0; /* Transparent white background */
+    background-color: #F8E8DA; /* Transparent white background */
     overflow-x: hidden;
   }
   
