--- a/src/ImageSlider.css
+++ b/src/ImageSlider.css
@@ -45,6 +45,8 @@ body {
     width: 20%;  /* Expand clickable width */
     height: calc(100% + 40px); /* Make area taller */
     padding: 10px;
+    margin-left:-8%;
+    margin-right:-8%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -108,6 +110,8 @@ body {
 
     .img-slider-button {
         width: 10%; /* Slightly smaller */
+        margin-left:0%;
+        margin-right:0%;
 
     }
 
