--- a/src/BigAbout.css
+++ b/src/BigAbout.css
@@ -124,12 +124,12 @@ transform: translateX(-50%);
 
 .about-us-info p{
   position:absolute;
-  top:50%;
+  top:66%;
   left:50%;
   transform:translate(-50%,-50%);
   width:400px;
   font-size:15px;
-  margin-top:15vh;
+  /* margin-top:20vh; */
 }
 }
 
