--- a/src/BigAbout.css
+++ b/src/BigAbout.css
@@ -120,49 +120,68 @@ max-width:75%;
 left:50%;
 transform: translateX(-50%);
   
-}
+} 
 
 .about-us-info p{
   position:absolute;
-  top:66%;
+  top:50%;
   left:50%;
-  transform:translate(-50%,-50%);
+  transform:translate(-50%,-50%); 
   width:400px;
-  font-size:15px;
-  /* margin-top:20vh; */
+  font-size:15px; 
+  margin-top:10vh;
 }
-}
+} 
 
 
 @media screen and (max-width: 400px){
-
-  .about-us-info h2{
-    margin-top:120px;
-    width:350px;
-    font-size:40px;
+  #about-us-section {
+    flex-direction: column;
+    justify-content: space-between;
+    overflow-x:hidden;
+  }
+  .about-us-image {
+    height:120vh;
+    overflow-x:hidden;
+  }
+  .about-us-image img {
+    position:relative;
+    height:120vh;
+    overflow-x:hidden;
+     }
+ 
+  .about-us-info {
+   margin-left:-40px;
   }
 
-  .about-us-info p{
-    width:360px;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    margin-top:21vh;
-    font-size:15px;
+.about-us-info h2{
+  width:400px;
+  background: linear-gradient(to right, #1d4288 20%, #2f77c9, #539AD3);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent; /* Add some margin between spans if needed */
+  font-size:40px;
+  margin-top:120px;
+  position: absolute;
+  top:-20px;
+left:50%;
+transform: translateX(-50%);
+  
+} 
 
-  }
-
-  .about-us-image img{
-    height:150vh;
-  }
-  .about-us-image{
-    height:150vh;
-  }
+.about-us-info p{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%); 
+  width:360px;
+  font-size:14px; 
+  margin-top:15vh;
+}
 }
 
 
-@media screen and (max-width: 380px){
+/* @media screen and (max-width: 380px){
   .about-us-info h2{
     margin-top:120px;
     width:350px;
@@ -181,4 +200,4 @@ transform: translateX(-50%);
 
   }
 
-}
+} */ 
